[gd_scene load_steps=9 format=3 uid="uid://b7prk2dwncgs2"]

[ext_resource type="Script" path="res://Scum/HowToPlay.gd" id="1_75gcf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fp5dw"]
bg_color = Color(0.0745098, 0.0705882, 0.0862745, 0.784314)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gf1qv"]
bg_color = Color(0.286275, 0.27451, 0.317647, 0.784314)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p4gm6"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2gsep"]
bg_color = Color(1, 1, 1, 0.392157)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gj2x0"]
bg_color = Color(0, 0, 0, 0.392157)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="LabelSettings" id="LabelSettings_5n5kl"]
font_size = 18
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_arnd7"]
font_size = 14

[node name="HowToPlay" type="Control"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_75gcf")

[node name="HowToPlayButton" type="Button" parent="."]
custom_minimum_size = Vector2(30, 30)
offset_right = 30.0
offset_bottom = 30.0
tooltip_text = "How to play"
theme_override_styles/normal = SubResource("StyleBoxFlat_fp5dw")
theme_override_styles/hover = SubResource("StyleBoxFlat_gf1qv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fp5dw")
text = "?"

[node name="HowToPlayUI" type="Panel" parent="."]
visible = false
layout_direction = 2
offset_left = -210.0
offset_top = -460.0
offset_right = 40.0
offset_bottom = 40.0

[node name="Close" type="Button" parent="HowToPlayUI"]
custom_minimum_size = Vector2(20, 20)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -25.0
offset_bottom = 25.0
grow_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_p4gm6")
theme_override_styles/hover = SubResource("StyleBoxFlat_2gsep")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gj2x0")
text = "x"
icon_alignment = 1

[node name="Layout" type="VBoxContainer" parent="HowToPlayUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="HowToPlayUI/Layout"]
text = "How to play Tycoon"
label_settings = SubResource("LabelSettings_5n5kl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="HowToPlayUI/Layout"]
custom_minimum_size = Vector2(0, 420)
horizontal_scroll_mode = 0

[node name="RuleLayout" type="VBoxContainer" parent="HowToPlayUI/Layout/ScrollContainer"]
size_flags_horizontal = 3

[node name="GeneralRules" type="Label" parent="HowToPlayUI/Layout/ScrollContainer/RuleLayout"]
text = "____________________
General
During your turn you may play cards that have a higher value than the card that is currently in play:
(3, 4, 5, 6, 7, 8, 9, 10, J, Q, K, A, 2)

The last player to play a card in a round is the winner of that round and gets to start the next  round

The player holding the 3 of clubs starts the game

The goal of the game is to empty your hand"
label_settings = SubResource("LabelSettings_arnd7")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="MultiplesRule" type="Label" parent="HowToPlayUI/Layout/ScrollContainer/RuleLayout"]
visible = false
text = "____________________
Round Start
When starting a round (excluding the beginning of the game - where you have to play the three of clubs), you may play any card

You may also play more than one of the same card (you may play more than one three on the first turn), if you do, every player must play the same amount of cards that you played at the beginning of the round"
label_settings = SubResource("LabelSettings_arnd7")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ConsecutiveRule" type="Label" parent="HowToPlayUI/Layout/ScrollContainer/RuleLayout"]
visible = false
text = "____________________
Consecutives
Playing 3 cards that follow one another's value in consecutive order in a row forces players to play in consecutive order for the rest of the round (9, 10, J, Q -- for example, next player must play K then A etc)"
label_settings = SubResource("LabelSettings_arnd7")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="EightsRule" type="Label" parent="HowToPlayUI/Layout/ScrollContainer/RuleLayout"]
visible = false
text = "____________________
Eight Flush
Playing an 8 lets you immediately end the round and start a new one"
label_settings = SubResource("LabelSettings_arnd7")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="RevolutionRule" type="Label" parent="HowToPlayUI/Layout/ScrollContainer/RuleLayout"]
visible = false
text = "____________________
Revolution
Playing four cards at once flips the values of all cards for the rest of the game (2 is the lowest and 3 is the highest)

Other rules like consecutives (which will now be in descending order) still apply during a revolution"
label_settings = SubResource("LabelSettings_arnd7")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="JokerRules" type="Label" parent="HowToPlayUI/Layout/ScrollContainer/RuleLayout"]
visible = false
text = "____________________
The Joker
The joker is a powerful wildcardcard that on its own can beat any other card (including another joker)

However, jokers may be played together with any card. When it is, its value changes to the value of the cards it's played with"
label_settings = SubResource("LabelSettings_arnd7")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="NewGameRules" type="Label" parent="HowToPlayUI/Layout/ScrollContainer/RuleLayout"]
visible = false
text = "____________________
End of Game
When all players but one empty their hand, the game is over and the the player who came in first (known as the tycoon) gains 3 points, the player in second (the rich player) gains 2, the player who came in last (the bankrupt player) gains none and everyone else gains 1

When the next game in the match is started and cards are finished drawing, the bankrupt player gives 2 of their highest value cards to the tycoon 

The rich player and poor (second last place) also trade, but only one card (also one card for the tycoon and bankrupt if there are less than four players in the match, in this case there is no rich and poor)"
label_settings = SubResource("LabelSettings_arnd7")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="EndOfMatchRules" type="Label" parent="HowToPlayUI/Layout/ScrollContainer/RuleLayout"]
visible = false
text = "____________________
End of Match
The first player to 7 points wins the whole match and is a wealthy gigachad who is very smart and gets mad bitches"
label_settings = SubResource("LabelSettings_arnd7")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="RuleButtonLayout" type="HBoxContainer" parent="HowToPlayUI/Layout"]
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="GeneralButton" type="Button" parent="HowToPlayUI/Layout/RuleButtonLayout"]
size_flags_horizontal = 3
tooltip_text = "General Rules"
toggle_mode = true
button_pressed = true
text = "1"

[node name="MultiplesButton" type="Button" parent="HowToPlayUI/Layout/RuleButtonLayout"]
size_flags_horizontal = 3
toggle_mode = true
text = "2"

[node name="ConsecutivesButton" type="Button" parent="HowToPlayUI/Layout/RuleButtonLayout"]
size_flags_horizontal = 3
toggle_mode = true
text = "3"

[node name="EightsButton" type="Button" parent="HowToPlayUI/Layout/RuleButtonLayout"]
size_flags_horizontal = 3
toggle_mode = true
text = "4"

[node name="RevolutionButton" type="Button" parent="HowToPlayUI/Layout/RuleButtonLayout"]
size_flags_horizontal = 3
toggle_mode = true
text = "5"

[node name="JokerButton" type="Button" parent="HowToPlayUI/Layout/RuleButtonLayout"]
size_flags_horizontal = 3
toggle_mode = true
text = "6"

[node name="NewGameButton" type="Button" parent="HowToPlayUI/Layout/RuleButtonLayout"]
size_flags_horizontal = 3
toggle_mode = true
text = "7"

[node name="EndOfMatchButton" type="Button" parent="HowToPlayUI/Layout/RuleButtonLayout"]
size_flags_horizontal = 3
toggle_mode = true
text = "8"
